Improve Fluid Freezer recipes: Allow FluidIngredient (single fluid id, a list of fluid IDs, or a #-prefixed Fluid Tag) with amount to be used as fluid ingredient
(cherry picked from commit 0384c4d84315efd4611e08f56af7dccbad444fc6)